[package]
name = "rivet"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Dependencies
anyhow = "1.0"
chrono = "0.4.38"
clap = { version = "4.3", features = ["derive"] }
global-error = { path = "lib/global-error" }
indoc = "2.0.5"
rivet-migrate = { path = "lib/migrate" }
rivet-term = { git = "https://github.com/rivet-gg/rivet-term.git", rev = "d539a07d2920d47b88410f20e6d106b497cff1f5" }
serde_json = "1.0.128"
strum = "0.26.3"
tabled = "0.16.0"
thiserror = "1.0.64"
tokio = { version = "1.40", features = ["full", "tracing"] }
tracing = "0.1"
url = "2.5.2"
uuid = "1.10.0"

 # Standalone
cluster-datacenter-tls-renew = { path = "svc/pkg/cluster/standalone/datacenter-tls-renew", optional = true }
cluster-gc = { path = "svc/pkg/cluster/standalone/gc", optional = true }
cluster-metrics-publish = { path = "svc/pkg/cluster/standalone/metrics-publish", optional = true }
job-gc = { path = "svc/pkg/job/standalone/gc", optional = true }
linode-gc = { path = "svc/pkg/linode/standalone/gc", optional = true }
load-test-api-cloud = { path = "svc/pkg/load-test/standalone/api-cloud", optional = true }
load-test-mm = { path = "svc/pkg/load-test/standalone/mm", optional = true }
load-test-mm-sustain = { path = "svc/pkg/load-test/standalone/mm-sustain", optional = true }
load-test-sqlx = { path = "svc/pkg/load-test/standalone/sqlx", optional = true }
load-test-watch-requests = { path = "svc/pkg/load-test/standalone/watch-requests", optional = true }
mm-gc = { path = "svc/pkg/mm/standalone/gc", optional = true }
monolith-worker = { path = "svc/pkg/monolith/standalone/worker", optional = true }
monolith-workflow-worker = { path = "svc/pkg/monolith/standalone/workflow-worker", optional = true }
nomad-monitor = { path = "svc/pkg/nomad/standalone/monitor", optional = true }
pegboard-gc = { path = "svc/pkg/pegboard/standalone/gc", optional = true }
pegboard-ws = { path = "svc/pkg/pegboard/standalone/ws", optional = true }
workflow-gc = { path = "svc/pkg/workflow/standalone/gc", optional = true }
workflow-metrics-publish = { path = "svc/pkg/workflow/standalone/metrics-publish", optional = true }

# Cron
telemetry-beacon = { path = "svc/pkg/telemetry/standalone/beacon", optional = true }
user-delete-pending = { path = "svc/pkg/user/standalone/delete-pending", optional = true }

# API
api-internal-monolith = { path = "svc/api/internal-monolith", optional = true }
api-monolith = { path = "svc/api/monolith", optional = true }

# Oneshot
build-default-create = { path = "svc/pkg/build/standalone/default-create", optional = true }
cluster-default-update = { path = "svc/pkg/cluster/standalone/default-update", optional = true }
cluster-workflow-backfill = { path = "svc/pkg/cluster/standalone/workflow-backfill", optional = true }
pegboard-dc-init = { path = "svc/pkg/pegboard/standalone/dc-init", optional = true }
s3-util = { version = "0.1.0", path = "lib/s3-util" }
rivet-runtime = { version = "0.1.0", path = "lib/runtime" }
rivet-health-checks = { version = "0.1.0", path = "lib/health-checks" }
rivet-metrics = { version = "0.1.0", path = "lib/metrics" }
rivet-pools = { version = "0.1.0", path = "lib/pools" }
colored_json = "5.0.0"
serde = { version = "1.0.210", features = ["derive"] }
tempfile = "3.13.0"
serde_yaml = "0.9.34"

[dependencies.sqlx]
git = "https://github.com/rivet-gg/sqlx"
rev = "08d6e61aa0572e7ec557abbedb72cebb96e1ac5b"
default-features = false
features = ["runtime-tokio", "postgres"]

[features]
default = ["standalone", "cron", "api-internal", "api", "oneshot"]
standalone = [
    "cluster-datacenter-tls-renew",
    "cluster-gc",
    "cluster-metrics-publish",
    "cluster-metrics-publish",
    "job-gc",
    "job-gc",
    "linode-gc",
    "load-test-api-cloud",
    "load-test-mm",
    "load-test-mm-sustain",
    "load-test-sqlx",
    "load-test-watch-requests",
    "mm-gc",
    "monolith-worker",
    "monolith-workflow-worker",
    "nomad-monitor",
    "pegboard-gc",
    "pegboard-ws",
    "user-delete-pending",
    "workflow-gc",
    "workflow-metrics-publish",
    "workflow-metrics-publish",
]
cron = [
	"user-delete-pending",
    "telemetry-beacon",
]
api-internal = [
    "api-internal-monolith",
]
api = [
	"api-monolith"
]
oneshot = [
    "build-default-create",
    "cluster-default-update",
    "cluster-workflow-backfill",
    "pegboard-dc-init",
]

[workspace]
resolver = "2"
# Find all packages with: find . -name Cargo.toml
members = [
	"infra/default-builds/dockerfiles/test-ds-echo",
	"infra/default-builds/dockerfiles/test-mm-lobby-echo",
	"sdks/full/rust",
	"svc/api/provision",
	"svc/api/matchmaker",
	"svc/api/portal",
	"svc/api/monolith",
	"svc/api/kv",
	"svc/api/traefik-provider",
	"svc/api/identity",
	"svc/api/auth",
	"svc/api/group",
	"svc/api/cf-verification",
	"svc/api/admin",
	"svc/api/status",
	"svc/api/internal-monolith",
	"svc/api/cloud",
	"svc/api/job",
	"svc/api/games",
	"svc/api/servers",
	"svc/pkg/token/ops/exchange",
	"svc/pkg/token/ops/revoke",
	"svc/pkg/token/ops/get",
	"svc/pkg/token/ops/create",
	"svc/pkg/game-node",
	"svc/pkg/nsfw/util",
	"svc/pkg/nsfw/ops/image-score",
	"svc/pkg/cluster",
	"svc/pkg/cluster/standalone/workflow-backfill",
	"svc/pkg/cluster/standalone/datacenter-tls-renew",
	"svc/pkg/cluster/standalone/default-update",
	"svc/pkg/cluster/standalone/gc",
	"svc/pkg/cluster/standalone/metrics-publish",
	"svc/pkg/email-verification/ops/complete",
	"svc/pkg/email-verification/ops/create",
	"svc/pkg/user-identity/ops/delete",
	"svc/pkg/user-identity/ops/get",
	"svc/pkg/user-identity/ops/create",
	"svc/pkg/pegboard",
	"svc/pkg/pegboard/standalone/dc-init",
	"svc/pkg/pegboard/standalone/gc",
	"svc/pkg/pegboard/standalone/ws",
	"svc/pkg/monolith/standalone/workflow-worker",
	"svc/pkg/monolith/standalone/worker",
	"svc/pkg/kv/util",
	"svc/pkg/kv/ops/get",
	"svc/pkg/kv/ops/list",
	"svc/pkg/kv/worker",
	"svc/pkg/ds",
	"svc/pkg/linode",
	"svc/pkg/linode/standalone/gc",
	"svc/pkg/user-dev/worker",
	"svc/pkg/load-test/standalone/api-cloud",
	"svc/pkg/load-test/standalone/watch-requests",
	"svc/pkg/load-test/standalone/sqlx",
	"svc/pkg/load-test/standalone/mm",
	"svc/pkg/load-test/standalone/mm-sustain",
	"svc/pkg/user-follow/ops/request-list",
	"svc/pkg/user-follow/ops/count",
	"svc/pkg/user-follow/ops/relationship-get",
	"svc/pkg/user-follow/ops/get",
	"svc/pkg/user-follow/ops/toggle",
	"svc/pkg/user-follow/ops/list",
	"svc/pkg/user-follow/worker",
	"svc/pkg/faker/ops/job-template",
	"svc/pkg/faker/ops/mm-player",
	"svc/pkg/faker/ops/user",
	"svc/pkg/faker/ops/game",
	"svc/pkg/faker/ops/game-version",
	"svc/pkg/faker/ops/region",
	"svc/pkg/faker/ops/team",
	"svc/pkg/faker/ops/job-run",
	"svc/pkg/faker/ops/game-namespace",
	"svc/pkg/faker/ops/mm-lobby-row",
	"svc/pkg/faker/ops/build",
	"svc/pkg/faker/ops/mm-lobby",
	"svc/pkg/faker/ops/cdn-site",
	"svc/pkg/user/standalone/delete-pending",
	"svc/pkg/user/ops/mutual-friend-list",
	"svc/pkg/user/ops/resolve-email",
	"svc/pkg/user/ops/get",
	"svc/pkg/user/ops/search",
	"svc/pkg/user/ops/profile-validate",
	"svc/pkg/user/ops/pending-delete-toggle",
	"svc/pkg/user/ops/token-create",
	"svc/pkg/user/ops/team-list",
	"svc/pkg/user/ops/resolve-access-token",
	"svc/pkg/user/ops/avatar-upload-complete",
	"svc/pkg/user/worker",
	"svc/pkg/game/ops/namespace-version-set",
	"svc/pkg/game/ops/version-validate",
	"svc/pkg/game/ops/validate",
	"svc/pkg/game/ops/resolve-namespace-id",
	"svc/pkg/game/ops/namespace-version-history-list",
	"svc/pkg/game/ops/namespace-resolve-name-id",
	"svc/pkg/game/ops/recommend",
	"svc/pkg/game/ops/version-list",
	"svc/pkg/game/ops/namespace-validate",
	"svc/pkg/game/ops/list-for-team",
	"svc/pkg/game/ops/namespace-get",
	"svc/pkg/game/ops/get",
	"svc/pkg/game/ops/version-get",
	"svc/pkg/game/ops/list-all",
	"svc/pkg/game/ops/logo-upload-complete",
	"svc/pkg/game/ops/namespace-list",
	"svc/pkg/game/ops/namespace-create",
	"svc/pkg/game/ops/resolve-name-id",
	"svc/pkg/game/ops/namespace-resolve-url",
	"svc/pkg/game/ops/create",
	"svc/pkg/game/ops/version-create",
	"svc/pkg/game/ops/banner-upload-complete",
	"svc/pkg/game/ops/token-development-validate",
	"svc/pkg/team-invite/ops/get",
	"svc/pkg/team-invite/worker",
	"svc/pkg/captcha/util",
	"svc/pkg/captcha/ops/hcaptcha-config-get",
	"svc/pkg/captcha/ops/verify",
	"svc/pkg/captcha/ops/turnstile-verify",
	"svc/pkg/captcha/ops/turnstile-config-get",
	"svc/pkg/captcha/ops/request",
	"svc/pkg/captcha/ops/hcaptcha-verify",
	"svc/pkg/mm-config/ops/namespace-config-validate",
	"svc/pkg/mm-config/ops/version-publish",
	"svc/pkg/mm-config/ops/lobby-group-get",
	"svc/pkg/mm-config/ops/namespace-get",
	"svc/pkg/mm-config/ops/lobby-group-resolve-version",
	"svc/pkg/mm-config/ops/version-get",
	"svc/pkg/mm-config/ops/version-prepare",
	"svc/pkg/mm-config/ops/lobby-group-resolve-name-id",
	"svc/pkg/mm-config/ops/namespace-create",
	"svc/pkg/mm-config/ops/game-upsert",
	"svc/pkg/mm-config/ops/game-get",
	"svc/pkg/mm-config/ops/namespace-config-set",
	"svc/pkg/kv-config/ops/version-publish",
	"svc/pkg/kv-config/ops/namespace-get",
	"svc/pkg/kv-config/ops/version-get",
	"svc/pkg/kv-config/ops/version-prepare",
	"svc/pkg/kv-config/ops/namespace-create",
	"svc/pkg/region/ops/resolve",
	"svc/pkg/region/ops/recommend",
	"svc/pkg/region/ops/get",
	"svc/pkg/region/ops/resolve-for-game",
	"svc/pkg/region/ops/list-for-game",
	"svc/pkg/region/ops/list",
	"svc/pkg/nomad/standalone/monitor",
	"svc/pkg/identity-config/ops/version-publish",
	"svc/pkg/identity-config/ops/namespace-get",
	"svc/pkg/identity-config/ops/version-get",
	"svc/pkg/identity-config/ops/version-prepare",
	"svc/pkg/identity-config/ops/namespace-create",
	"svc/pkg/cdn/util",
	"svc/pkg/cdn/ops/site-get",
	"svc/pkg/cdn/ops/site-list-for-game",
	"svc/pkg/cdn/ops/namespace-resolve-domain",
	"svc/pkg/cdn/ops/version-publish",
	"svc/pkg/cdn/ops/namespace-domain-create",
	"svc/pkg/cdn/ops/namespace-auth-user-remove",
	"svc/pkg/cdn/ops/namespace-get",
	"svc/pkg/cdn/ops/ns-enable-domain-public-auth-set",
	"svc/pkg/cdn/ops/ns-auth-type-set",
	"svc/pkg/cdn/ops/site-create",
	"svc/pkg/cdn/ops/version-get",
	"svc/pkg/cdn/ops/namespace-auth-user-update",
	"svc/pkg/cdn/ops/version-prepare",
	"svc/pkg/cdn/ops/namespace-domain-remove",
	"svc/pkg/cdn/ops/namespace-create",
	"svc/pkg/cdn/worker",
	"svc/pkg/team/util",
	"svc/pkg/team/ops/validate",
	"svc/pkg/team/ops/user-ban-list",
	"svc/pkg/team/ops/recommend",
	"svc/pkg/team/ops/resolve-display-name",
	"svc/pkg/team/ops/member-list",
	"svc/pkg/team/ops/get",
	"svc/pkg/team/ops/member-count",
	"svc/pkg/team/ops/member-relationship-get",
	"svc/pkg/team/ops/search",
	"svc/pkg/team/ops/member-get",
	"svc/pkg/team/ops/profile-validate",
	"svc/pkg/team/ops/user-ban-get",
	"svc/pkg/team/ops/join-request-list",
	"svc/pkg/team/ops/avatar-upload-complete",
	"svc/pkg/team/worker",
	"svc/pkg/ds-log/ops/read",
	"svc/pkg/ds-log/ops/export",
	"svc/pkg/job-run",
	"svc/pkg/workflow/standalone/gc",
	"svc/pkg/workflow/standalone/metrics-publish",
	"svc/pkg/cloud/ops/version-publish",
	"svc/pkg/cloud/ops/game-config-get",
	"svc/pkg/cloud/ops/namespace-token-public-create",
	"svc/pkg/cloud/ops/game-config-create",
	"svc/pkg/cloud/ops/namespace-get",
	"svc/pkg/cloud/ops/version-get",
	"svc/pkg/cloud/ops/game-token-create",
	"svc/pkg/cloud/ops/device-link-create",
	"svc/pkg/cloud/ops/namespace-create",
	"svc/pkg/cloud/ops/namespace-token-development-create",
	"svc/pkg/cloud/worker",
	"svc/pkg/job/util",
	"svc/pkg/job/standalone/gc",
	"svc/pkg/mm/util",
	"svc/pkg/mm/standalone/gc",
	"svc/pkg/mm/ops/player-get",
	"svc/pkg/mm/ops/dev-player-token-create",
	"svc/pkg/mm/ops/lobby-idle-update",
	"svc/pkg/mm/ops/lobby-find-lobby-query-list",
	"svc/pkg/mm/ops/lobby-find-fail",
	"svc/pkg/mm/ops/lobby-list-for-user-id",
	"svc/pkg/mm/ops/lobby-history",
	"svc/pkg/mm/ops/lobby-list-for-namespace",
	"svc/pkg/mm/ops/lobby-state-get",
	"svc/pkg/mm/ops/lobby-player-count",
	"svc/pkg/mm/ops/lobby-find-try-complete",
	"svc/pkg/mm/ops/lobby-for-run-id",
	"svc/pkg/mm/ops/player-count-for-namespace",
	"svc/pkg/mm/ops/lobby-runtime-aggregate",
	"svc/pkg/mm/ops/lobby-get",
	"svc/pkg/mm/worker",
	"svc/pkg/game-user/util",
	"svc/pkg/game-user/ops/recommend",
	"svc/pkg/game-user/ops/get",
	"svc/pkg/game-user/ops/link-create",
	"svc/pkg/game-user/ops/list-for-user",
	"svc/pkg/game-user/ops/recent-session-list",
	"svc/pkg/game-user/ops/link-get",
	"svc/pkg/game-user/ops/create",
	"svc/pkg/game-user/worker",
	"svc/pkg/telemetry/standalone/beacon",
	"svc/pkg/external/ops/request-validate",
	"svc/pkg/external/worker",
	"svc/pkg/build",
	"svc/pkg/build/util",
	"svc/pkg/build/standalone/default-create",
	"svc/pkg/build/ops/get",
	"svc/pkg/build/ops/list-for-game",
	"svc/pkg/build/ops/list-for-env",
	"svc/pkg/build/ops/create",
	"svc/pkg/cf-custom-hostname/ops/get",
	"svc/pkg/cf-custom-hostname/ops/resolve-hostname",
	"svc/pkg/cf-custom-hostname/ops/list-for-namespace-id",
	"svc/pkg/cf-custom-hostname/worker",
	"svc/pkg/ip/ops/info",
	"svc/pkg/perf/ops/log-get",
	"svc/pkg/user-report/worker",
	"svc/pkg/email/ops/send",
	"svc/pkg/job-log/ops/read",
	"svc/pkg/job-log/worker",
	"svc/pkg/upload/ops/prepare",
	"svc/pkg/upload/ops/complete",
	"svc/pkg/upload/ops/get",
	"svc/pkg/upload/ops/file-list",
	"svc/pkg/upload/ops/list-for-user",
	"svc/pkg/upload/worker",
	"svc/pkg/profanity/ops/check",
	"svc/pkg/custom-user-avatar/ops/list-for-game",
	"svc/pkg/custom-user-avatar/ops/upload-complete",
	"svc/pkg/debug/ops/email-res",
	"svc/pkg/tier",
	"lib/operation/core",
	"lib/operation/macros",
	"lib/metrics",
	"lib/pools",
	"lib/pegboard/echo",
	"lib/pegboard/container-runner",
	"lib/pegboard/manager",
	"lib/s3-util",
	"lib/cache/result",
	"lib/cache/build",
	"lib/connection",
	"lib/util/core",
	"lib/util/search",
	"lib/util/env",
	"lib/util/macros",
	"lib/bolt/core",
	"lib/bolt/config",
	"lib/bolt/cli",
	"lib/nomad-util",
	"lib/health-checks",
	"lib/chirp/metrics",
	"lib/chirp/types",
	"lib/chirp/worker",
	"lib/chirp/perf",
	"lib/chirp/worker-attributes",
	"lib/chirp/client",
	"lib/runtime",
	"lib/redis-util",
	"lib/types-proto/core",
	"lib/types-proto/build",
	"lib/smithy-output/api-status/rust-server",
	"lib/smithy-output/api-status/rust",
	"lib/smithy-output/api-matchmaker/rust-server",
	"lib/smithy-output/api-matchmaker/rust",
	"lib/smithy-output/api-cloud/rust-server",
	"lib/smithy-output/api-cloud/rust",
	"lib/smithy-output/api-portal/rust-server",
	"lib/smithy-output/api-portal/rust",
	"lib/smithy-output/api-cf-verification/rust-server",
	"lib/smithy-output/api-cf-verification/rust",
	"lib/smithy-output/api-party/rust-server",
	"lib/smithy-output/api-party/rust",
	"lib/smithy-output/api-traefik-provider/rust-server",
	"lib/smithy-output/api-traefik-provider/rust",
	"lib/smithy-output/api-group/rust-server",
	"lib/smithy-output/api-group/rust",
	"lib/smithy-output/api-identity/rust-server",
	"lib/smithy-output/api-identity/rust",
	"lib/smithy-output/api-job/rust-server",
	"lib/smithy-output/api-job/rust",
	"lib/smithy-output/api-auth/rust-server",
	"lib/smithy-output/api-auth/rust",
	"lib/smithy-output/api-kv/rust-server",
	"lib/smithy-output/api-kv/rust",
	"lib/migrate",
	"lib/api-helper/macros",
	"lib/api-helper/build",
	"lib/job-runner",
	"lib/global-error",
	"lib/formatted-error",
	"lib/test-images",
	"lib/schemac",
	"lib/convert",
	"lib/chirp-workflow/core",
	"lib/chirp-workflow/macros",
	"lib/claims",
]

# Speed up compilation
[profile.dev]
overflow-checks = false
debug = false
lto = "off"

# Speed up proc macros.
#
# https://endler.dev/2020/rust-compile-times/#avoid-procedural-macro-crates
[profile.dev.build-override]
opt-level = 3
