[workspace]
resolver = "2"
# Find all packages with: find . -name Cargo.toml | grep -v resources | grep -v externals | grep -v "sdks/runtime" | grep -v "sdks/full/rust-cli" | grep -v "infra/client/" | grep -v "infra/legacy/job-runner" | sed -E 's|^./(.*)Cargo\.toml$|"\1",|'
members = [
"sdks/full/rust/",
"packages/infra/server/",
"packages/common/operation/core/",
"packages/common/operation/macros/",
"packages/common/metrics/",
"packages/common/pools/",
"packages/common/s3-util/",
"packages/common/cache/result/",
"packages/common/cache/build/",
"packages/common/test/",
"packages/common/connection/",
"packages/common/util/core/",
"packages/common/util/search/",
"packages/common/util/macros/",
"packages/common/config/",
"packages/common/nomad-util/",
"packages/common/health-checks/",
"packages/common/chirp/metrics/",
"packages/common/chirp/types/",
"packages/common/chirp/worker/",
"packages/common/chirp/perf/",
"packages/common/chirp/worker-attributes/",
"packages/common/chirp/client/",
"packages/common/runtime/",
"packages/common/service-manager/",
"packages/common/redis-util/",
"packages/common/env/",
"packages/common/types-proto/core/",
"packages/common/types-proto/build/",
"packages/common/smithy-output/api-status/rust-server/",
"packages/common/smithy-output/api-status/rust/",
"packages/common/smithy-output/api-matchmaker/rust-server/",
"packages/common/smithy-output/api-matchmaker/rust/",
"packages/common/smithy-output/api-cloud/rust-server/",
"packages/common/smithy-output/api-cloud/rust/",
"packages/common/smithy-output/api-portal/rust-server/",
"packages/common/smithy-output/api-portal/rust/",
"packages/common/smithy-output/api-cf-verification/rust-server/",
"packages/common/smithy-output/api-cf-verification/rust/",
"packages/common/smithy-output/api-party/rust-server/",
"packages/common/smithy-output/api-party/rust/",
"packages/common/smithy-output/api-traefik-provider/rust-server/",
"packages/common/smithy-output/api-traefik-provider/rust/",
"packages/common/smithy-output/api-group/rust-server/",
"packages/common/smithy-output/api-group/rust/",
"packages/common/smithy-output/api-identity/rust-server/",
"packages/common/smithy-output/api-identity/rust/",
"packages/common/smithy-output/api-job/rust-server/",
"packages/common/smithy-output/api-job/rust/",
"packages/common/smithy-output/api-auth/rust-server/",
"packages/common/smithy-output/api-auth/rust/",
"packages/common/smithy-output/api-kv/rust-server/",
"packages/common/smithy-output/api-kv/rust/",
"packages/common/migrate/",
"packages/common/api-helper/macros/",
"packages/common/api-helper/build/",
"packages/common/global-error/",
"packages/common/formatted-error/",
"packages/common/test-images/",
"packages/common/hub-embed/",
"packages/common/schemac/",
"packages/common/convert/",
"packages/common/chirp-workflow/core/",
"packages/common/chirp-workflow/macros/",
"packages/common/claims/",
"packages/api/provision/",
"packages/api/ui/",
"packages/api/matchmaker/",
"packages/api/portal/",
"packages/api/traefik-provider/",
"packages/api/identity/",
"packages/api/auth/",
"packages/api/group/",
"packages/api/monolith-edge/",
"packages/api/cf-verification/",
"packages/api/status/",
"packages/api/cloud/",
"packages/api/job/",
"packages/api/games/",
"packages/api/actor/",
"packages/api/monolith-public/",
"packages/services/token/ops/exchange/",
"packages/services/token/ops/revoke/",
"packages/services/token/ops/get/",
"packages/services/token/ops/create/",
"packages/services/cluster/",
"packages/services/cluster/standalone/datacenter-tls-renew/",
"packages/services/cluster/standalone/default-update/",
"packages/services/cluster/standalone/gc/",
"packages/services/cluster/standalone/metrics-publish/",
"packages/services/email-verification/ops/complete/",
"packages/services/email-verification/ops/create/",
"packages/services/user-identity/ops/delete/",
"packages/services/user-identity/ops/get/",
"packages/services/user-identity/ops/create/",
"packages/services/pegboard/",
"packages/services/pegboard/standalone/dc-init/",
"packages/services/pegboard/standalone/gc/",
"packages/services/pegboard/standalone/ws/",
"packages/services/monolith/standalone/workflow-worker/",
"packages/services/monolith/standalone/worker/",
"packages/services/ds/",
"packages/services/linode/",
"packages/services/linode/standalone/gc/",
"packages/services/load-test/standalone/api-cloud/",
"packages/services/load-test/standalone/watch-requests/",
"packages/services/load-test/standalone/sqlx/",
"packages/services/load-test/standalone/mm/",
"packages/services/load-test/standalone/mm-sustain/",
"packages/services/faker/ops/job-template/",
"packages/services/faker/ops/mm-player/",
"packages/services/faker/ops/user/",
"packages/services/faker/ops/game/",
"packages/services/faker/ops/game-version/",
"packages/services/faker/ops/region/",
"packages/services/faker/ops/team/",
"packages/services/faker/ops/job-run/",
"packages/services/faker/ops/game-namespace/",
"packages/services/faker/ops/mm-lobby-row/",
"packages/services/faker/ops/build/",
"packages/services/faker/ops/mm-lobby/",
"packages/services/faker/ops/cdn-site/",
"packages/services/user/standalone/delete-pending/",
"packages/services/user/ops/resolve-email/",
"packages/services/user/ops/get/",
"packages/services/user/ops/profile-validate/",
"packages/services/user/ops/pending-delete-toggle/",
"packages/services/user/ops/token-create/",
"packages/services/user/ops/team-list/",
"packages/services/user/ops/avatar-upload-complete/",
"packages/services/user/worker/",
"packages/services/game/ops/namespace-version-set/",
"packages/services/game/ops/version-validate/",
"packages/services/game/ops/validate/",
"packages/services/game/ops/resolve-namespace-id/",
"packages/services/game/ops/namespace-version-history-list/",
"packages/services/game/ops/namespace-resolve-name-id/",
"packages/services/game/ops/recommend/",
"packages/services/game/ops/version-list/",
"packages/services/game/ops/namespace-validate/",
"packages/services/game/ops/list-for-team/",
"packages/services/game/ops/namespace-get/",
"packages/services/game/ops/get/",
"packages/services/game/ops/version-get/",
"packages/services/game/ops/list-all/",
"packages/services/game/ops/logo-upload-complete/",
"packages/services/game/ops/namespace-list/",
"packages/services/game/ops/namespace-create/",
"packages/services/game/ops/resolve-name-id/",
"packages/services/game/ops/namespace-resolve-url/",
"packages/services/game/ops/create/",
"packages/services/game/ops/version-create/",
"packages/services/game/ops/banner-upload-complete/",
"packages/services/game/ops/token-development-validate/",
"packages/services/team-invite/ops/get/",
"packages/services/team-invite/worker/",
"packages/services/captcha/util/",
"packages/services/captcha/ops/hcaptcha-config-get/",
"packages/services/captcha/ops/verify/",
"packages/services/captcha/ops/turnstile-verify/",
"packages/services/captcha/ops/turnstile-config-get/",
"packages/services/captcha/ops/request/",
"packages/services/captcha/ops/hcaptcha-verify/",
"packages/services/mm-config/ops/namespace-config-validate/",
"packages/services/mm-config/ops/version-publish/",
"packages/services/mm-config/ops/lobby-group-get/",
"packages/services/mm-config/ops/namespace-get/",
"packages/services/mm-config/ops/lobby-group-resolve-version/",
"packages/services/mm-config/ops/version-get/",
"packages/services/mm-config/ops/version-prepare/",
"packages/services/mm-config/ops/lobby-group-resolve-name-id/",
"packages/services/mm-config/ops/namespace-create/",
"packages/services/mm-config/ops/game-upsert/",
"packages/services/mm-config/ops/game-get/",
"packages/services/mm-config/ops/namespace-config-set/",
"packages/services/region/ops/resolve/",
"packages/services/region/ops/recommend/",
"packages/services/region/ops/get/",
"packages/services/region/ops/resolve-for-game/",
"packages/services/region/ops/list-for-game/",
"packages/services/region/ops/list/",
"packages/services/nomad/standalone/monitor/",
"packages/services/cdn/util/",
"packages/services/cdn/ops/site-get/",
"packages/services/cdn/ops/site-list-for-game/",
"packages/services/cdn/ops/namespace-resolve-domain/",
"packages/services/cdn/ops/version-publish/",
"packages/services/cdn/ops/namespace-domain-create/",
"packages/services/cdn/ops/namespace-auth-user-remove/",
"packages/services/cdn/ops/namespace-get/",
"packages/services/cdn/ops/ns-enable-domain-public-auth-set/",
"packages/services/cdn/ops/ns-auth-type-set/",
"packages/services/cdn/ops/site-create/",
"packages/services/cdn/ops/version-get/",
"packages/services/cdn/ops/namespace-auth-user-update/",
"packages/services/cdn/ops/version-prepare/",
"packages/services/cdn/ops/namespace-domain-remove/",
"packages/services/cdn/ops/namespace-create/",
"packages/services/cdn/worker/",
"packages/services/team/util/",
"packages/services/team/ops/validate/",
"packages/services/team/ops/user-ban-list/",
"packages/services/team/ops/recommend/",
"packages/services/team/ops/resolve-display-name/",
"packages/services/team/ops/member-list/",
"packages/services/team/ops/get/",
"packages/services/team/ops/member-count/",
"packages/services/team/ops/member-relationship-get/",
"packages/services/team/ops/member-get/",
"packages/services/team/ops/profile-validate/",
"packages/services/team/ops/user-ban-get/",
"packages/services/team/ops/join-request-list/",
"packages/services/team/ops/avatar-upload-complete/",
"packages/services/team/worker/",
"packages/services/ds-log/ops/read/",
"packages/services/ds-log/ops/export/",
"packages/services/job-run/",
"packages/services/workflow/standalone/gc/",
"packages/services/workflow/standalone/metrics-publish/",
"packages/services/cloud/ops/version-publish/",
"packages/services/cloud/ops/game-config-get/",
"packages/services/cloud/ops/namespace-token-public-create/",
"packages/services/cloud/ops/game-config-create/",
"packages/services/cloud/ops/namespace-get/",
"packages/services/cloud/ops/version-get/",
"packages/services/cloud/ops/game-token-create/",
"packages/services/cloud/ops/device-link-create/",
"packages/services/cloud/ops/namespace-create/",
"packages/services/cloud/ops/namespace-token-development-create/",
"packages/services/cloud/worker/",
"packages/services/job/util/",
"packages/services/job/standalone/gc/",
"packages/services/mm/util/",
"packages/services/mm/standalone/gc/",
"packages/services/mm/ops/player-get/",
"packages/services/mm/ops/dev-player-token-create/",
"packages/services/mm/ops/lobby-idle-update/",
"packages/services/mm/ops/lobby-find-lobby-query-list/",
"packages/services/mm/ops/lobby-find-fail/",
"packages/services/mm/ops/lobby-list-for-user-id/",
"packages/services/mm/ops/lobby-history/",
"packages/services/mm/ops/lobby-list-for-namespace/",
"packages/services/mm/ops/lobby-state-get/",
"packages/services/mm/ops/lobby-player-count/",
"packages/services/mm/ops/lobby-find-try-complete/",
"packages/services/mm/ops/lobby-for-run-id/",
"packages/services/mm/ops/player-count-for-namespace/",
"packages/services/mm/ops/lobby-runtime-aggregate/",
"packages/services/mm/ops/lobby-get/",
"packages/services/mm/worker/",
"packages/services/telemetry/standalone/beacon/",
"packages/services/external/ops/request-validate/",
"packages/services/external/worker/",
"packages/services/build/",
"packages/services/build/util/",
"packages/services/build/standalone/default-create/",
"packages/services/build/ops/get/",
"packages/services/build/ops/list-for-game/",
"packages/services/build/ops/list-for-env/",
"packages/services/build/ops/create/",
"packages/services/server-spec/",
"packages/services/cf-custom-hostname/ops/get/",
"packages/services/cf-custom-hostname/ops/resolve-hostname/",
"packages/services/cf-custom-hostname/ops/list-for-namespace-id/",
"packages/services/cf-custom-hostname/worker/",
"packages/services/ip/ops/info/",
"packages/services/dynamic-config/",
"packages/services/email/ops/send/",
"packages/services/job-log/ops/read/",
"packages/services/job-log/worker/",
"packages/services/upload/ops/prepare/",
"packages/services/upload/ops/complete/",
"packages/services/upload/ops/get/",
"packages/services/upload/ops/file-list/",
"packages/services/upload/ops/list-for-user/",
"packages/services/upload/worker/",
"packages/services/custom-user-avatar/ops/list-for-game/",
"packages/services/custom-user-avatar/ops/upload-complete/",
"packages/services/debug/ops/email-res/",
"packages/services/tier/",
"packages/services/cloud/standalone/default-create",
"packages/services/user",
]
exclude = [
"externals/cloudflare-rs",
"externals/deno",
"externals/nomad-client",
"externals/posthog-rs",
"externals/redis-rs",
"externals/rivet-term",
"externals/serde_array_query",
"externals/sqlx",
]

# Speed up compilation
[profile.dev]
overflow-checks = false
debug = false
lto = "off"

# Speed up proc macros.
#
# https://endler.dev/2020/rust-compile-times/#avoid-procedural-macro-crates
[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3

