[package]
name = "rivet-claims"
version = "0.1.0"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
base64 = "0.13"
jsonwebtoken = "8.2.0"
global-error = { path = "../global-error" }
types = { path = "../types/core" }
lazy_static = "1.4"
prost = "0.10"
rivet-util = { path = "../util/core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
